--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N3BH72SZZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N3BH72SZZD');
+</script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
